# llm-wiki-monorepo

./: .gitignore  AGENTS.md  CHANGELOG.md  INDEX.md  MASTER_PROMPT.md  PURPOSE.md  QUICKGUIDE.md  README.md  VERSIONING.md  audit-C-report.md  install.sh  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
extension/: manifest.json  popup.html  popup.js
graph-engine/: package.json  tsconfig.json
graph-engine/src/: build.ts  index.ts  insights.ts  louvain.ts  relevance.ts  search.ts  types.ts
mcp-server/: package.json
mcp-server/src/: cleanup.ts  discover.ts  graph.ts  index.ts  lint.ts  review.ts  search.ts  storage.ts  types.ts  wiki-fs.ts
skill/: SKILL.md
skill/references/: article-guide.md  eow-cron-pipeline.md  examples-and-workflows.md  graph-construction-strategies.md  graphify-pipeline.md  ingest-guide.md  migration-guide.md  opencode-tutorial.md  schema-guide.md
skill/scripts/: backup.py  benchmark.py  deep_research.py  graph_insights.py  ingest.py  link_suggest.py  lint_wiki.py  migrate_log.py  scaffold.py  test_ingest_blocks.py  test_ingest_e2e.py
src/llm_wiki/: __init__.py  __main__.py  audit_review.py  backup.py  cli.py  deep_research.py  discover.py  graph_insights.py  lint_wiki.py  migrate_log.py  scaffold.py
src/llm_wiki/templates/_shared/: base-schema.md
src/llm_wiki/templates/algorithmic-trading/: extra-dirs.json
src/llm_wiki/templates/architecture/: extra-dirs.json
src/llm_wiki/templates/business/: PURPOSE.md  extra-dirs.json
src/llm_wiki/templates/codebase/: SCHEMA.md  extra-dirs.json
src/llm_wiki/templates/commodities/: PURPOSE.md  SCHEMA.md
src/llm_wiki/templates/crypto/: PURPOSE.md
src/llm_wiki/templates/cybersecurity/: SCHEMA.md
src/llm_wiki/templates/decompilers/: PURPOSE.md  SCHEMA.md
src/llm_wiki/templates/design-systems/: PURPOSE.md
src/llm_wiki/templates/developer-tools/: SCHEMA.md  extra-dirs.json
src/llm_wiki/templates/finance/: SCHEMA.md
src/llm_wiki/templates/machine-learning/: PURPOSE.md  extra-dirs.json
src/llm_wiki/templates/marketing/: extra-dirs.json
src/llm_wiki/templates/personal-growth/: PURPOSE.md  extra-dirs.json
src/llm_wiki/templates/prompt-engineering/: PURPOSE.md  SCHEMA.md
src/llm_wiki/templates/reading/: extra-dirs.json
src/llm_wiki/templates/research/: extra-dirs.json
templates/algorithmic-trading/: PURPOSE.md  SCHEMA.md  extra-dirs.json
templates/architecture/: PURPOSE.md  SCHEMA.md
templates/business/: SCHEMA.md
templates/codebase/: PURPOSE.md
templates/commodities/: SCHEMA.md  extra-dirs.json
templates/copywriting/: PURPOSE.md  SCHEMA.md  extra-dirs.json
templates/crypto/: SCHEMA.md  extra-dirs.json
templates/cybersecurity/: PURPOSE.md  extra-dirs.json
templates/decompilers/: SCHEMA.md  extra-dirs.json
templates/design-systems/: SCHEMA.md  extra-dirs.json
templates/developer-tools/: PURPOSE.md  SCHEMA.md
templates/finance/: PURPOSE.md  extra-dirs.json
templates/machine-learning/: SCHEMA.md
templates/marketing/: PURPOSE.md  SCHEMA.md
templates/medicine/: PURPOSE.md  SCHEMA.md  extra-dirs.json
templates/personal-growth/: SCHEMA.md
templates/prompt-engineering/: extra-dirs.json
templates/reading/: PURPOSE.md  SCHEMA.md
templates/research/: PURPOSE.md  SCHEMA.md
web-viewer/client/: index.html  main.ts  styles.css
web-viewer/server/: index.ts
web-viewer/server/render/: markdown.ts
web-viewer/server/routes/: graph.ts  search.ts
